# ebook-speaker

./: COMPILE  COPYING  ChangeLog  Changelog  Makefile  Makefile.am  Makefile.in  README.adoc  Readme  TODO  UCkd.h  UCkd.txt  aclocal.m4  config.h.in  configure  configure.ac  daisy.h  daisy3.c  eBook-speaker.1  eBook-speaker.c  eBook-speaker.de.po  eBook-speaker.desktop  eBook-speaker.h  eBook-speaker.html  eBook-speaker.nl.po  eBook-speaker.txt  entities.h  entities.txt  error.txt  icons_copyright.txt  install.sh
doc/: COMPILE  COPYING  Changelog  Makefile.am  Makefile.in  Readme  TODO  eBook-speaker.desktop  eBook-speaker.html  eBook-speaker.menu  eBook-speaker.txt  ebook-speaker.html  ebook-speaker.menu  ebook-speaker.txt  screenshot.html
m4/: Makefile.in
man/: Makefile.am  Makefile.in  eBook-speaker.1  ebook-speaker.1
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  bg.gmo  bg.po  de.gmo  de.po  eBook-speaker.de.po  eBook-speaker.nl.po  eBook-speaker.pot  ebook-speaker.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  nl.gmo  nl.po  pt.gmo  pt.po  ru.ebook-speaker.po  ru.po  sr.gmo  sr.po  uk.gmo  uk.po
src/: Makefile.am  Makefile.in  alsa_ctl.c  common.c  daisy.h  daisy2.02.c  daisy3.c  eBook-speaker.c  ebook-speaker.c  list_dir.c  ncx.c  opf.c  playfile.c
src/pactl/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/pactl/m4/: Makefile  Makefile.am  Makefile.in
src/pactl/src/: Makefile.am  Makefile.in  core-util.c  core-util.h  i18n.h  install.sh  macro.h  pactl-set-cmd.c  pactl.c  strbuf.c  strbuf.h
