docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = COMPILE COPYING Changelog License Readme TODO \
           eBook-speaker.desktop eBook-speaker.menu eBook-speaker.png \
           eBook-speaker.svg eBook-speaker.txt \
           ebook-speaker.desktop ebook-speaker.menu ebook-speaker.png \
           ebook-speaker.svg ebook-speaker.txt \
           icons_copyright.txt screenshot.html
dist_html_DATA = eBook-speaker.html ebook-speaker.html
