# pactl-set-volume - a small program for testing. (C)2018 J. Lemmens

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = aclocal.m4 ar-lib am autom4te.cache \
             compile config.guess config.status \
             config.sub configure configure.ac COPYING \
             depcomp INSTALL m4 Makefile.am \
             Makefile.in missing mkinstalldirs README
